--- a/css-exercises/foundations/intro-to-css/01-css-methods/index.html
+++ b/css-exercises/foundations/intro-to-css/01-css-methods/index.html
@@ -5,11 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Methods for Adding CSS</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
+    <link rel="stylesheet" href="style.css"> <!-- external method -->
+
+    <style> /* internal method. Note that CSS rules apply here including this comment. */
+        p {
+            background-color: green;
+            color: white;
+            font-size: 18px;
+            font-family: "Courier New", Courier, monospace;
+        }
+    </style>
+</head>
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <!-- inline method below: -->
+    <button style="background-color: orange; font-size: 18px; font-family: 'Courier New', Courier, monospace;">Inline Method</button>
   </body>
 </html>
